--- a/Readme
+++ b/Readme
@@ -1,3 +1,6 @@
 Hello, this is just a readme file.
 
 This Repo is being used for me to learn Python using the Python Crash Course PDF.
+
+I have finished this python book.
+24/8/22
